Rename the package to `Fluent`

--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,9 @@
 {
+    "name": "mnapoli/fluent-symfony",
+    "license": "MIT",
     "autoload": {
         "psr-4": {
-            "PhpSymfonyConfig\\": "src/"
+            "Fluent\\": "src/"
         },
         "files": [
             "src/functions.php"
