--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "symfony/config": "^3.2"
     },
     "require-dev": {
-        "phpunit/phpunit": "^6.0"
+        "phpunit/phpunit": "^6.0",
+        "symfony/symfony": "^3.2"
     }
 }
